--- a/index.css
+++ b/index.css
@@ -15,22 +15,23 @@ canvas {
   margin-left: auto;
   margin-right: auto;
   display: block;
-  image-rendering: pixelated;
-
-  border: 10px solid grey;
+  
+  border: 5px solid grey;
 }
 
-@media(max-width: 500px){
+@media(max-width: 720px){
   canvas {
+    image-rendering: pixelated;
     position: relative;
-    margin-top: 3%;
-    width: 90%;
+    width: 95%;
+    max-height: 720px;
   }
 }
-@media(min-width: 501px){
+@media(min-width: 721px){
   canvas {
     position: relative;
-    margin-top: 5%;
-    width: 40%;
+    /* margin-top: 5%; */
+    height: 90%;
+    /* max-height: 720px; */
   }
 }
